make mobile sign visible if error occurs add sign button at bottom of petition on mobile fix flakey test

--- a/app/assets/stylesheets/petition.css.scss
+++ b/app/assets/stylesheets/petition.css.scss
@@ -31,6 +31,7 @@
     margin-bottom: 8px;
   }
   .description {
+    margin-bottom: 10px;
     line-height: 21px;
   }
 }
@@ -373,8 +374,25 @@
 }
 
 @media (min-width: 250px) and (max-width: 767px) {
-  .sidebar_test.secondary {
-    display: none !important;
+  body #content #petition_page .sidebar_test { margin-top: 0; }
+  body #content #petition_page .secondary { margin-bottom: 0; }
+  .sidebar_test {
+    background: white;
+    display: none;
+    width: 300px;
+    .title {
+      margin: 0;
+      padding: 0;
+    }
+    .control-label {
+      margin-top: 5px !important;
+    }
+    .control-group, input {
+      margin-bottom: 4px;
+    }
+    .privacypolicy {
+      padding-bottom: 0;
+    }
   }
 }
 @media (min-width: 768px) and (max-width: 30000px) {
@@ -382,11 +400,17 @@
     display: none;
   }
 }
-.modal#sign_mobile {
+#sign_mobile {
   display: none;
   padding: 0;
   width: 300px;
-  margin: 0;
+  margin: 0 0 30px 0;
+  .help-inline {
+    font-size: 14px;
+    margin-bottom: 5px;
+    padding: 0px 5px;
+    float: left;
+  }
 }
 .controls .icon-trash a {
   width: 30px;
